# ollebjor-osen-project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  spec.md
assets/test/: loonar-test-scene.gltf
include/: Camera.hpp  Collider.hpp  Core.hpp  Entity.hpp  Enums.hpp  EventDispatcher.hpp  GameEngineLogger.hpp  Lua.hpp  LuaClass.hpp  LuaCore.hpp  LuaDebug.hpp  LuaEvent.hpp  LuaExporter.hpp  LuaGame.hpp  LuaPrimitive.hpp  LuaService.hpp  LuaSignal.hpp  LuaType.hpp  LuaUtil.hpp  LuaVector3.hpp  LuaWindowService.hpp  Material.hpp  MeshContainer.hpp  MeshEntity.hpp  MetatableRegistry.hpp  Observers.hpp  PhysicsCore.hpp  Primitive.hpp  PrimitiveDefinitions.hpp  PrimitiveLua.hpp  Ref.hpp  Renderer.hpp  SceneImporter.hpp  SceneManager.hpp  ScreenVertex.hpp  SystemEvents.hpp  Texture.hpp  Vertex.hpp  utils.hpp
include/lua/: LuaCamera.hpp  LuaCollider.hpp  LuaEvent.hpp  LuaMaterial.hpp  LuaMesh.hpp  LuaMeshContainer.hpp  LuaPrimitive.hpp  LuaSceneRef.hpp  LuaVector3.hpp
include/lua/singletons/: LuaWindow.hpp
scripts/: LoonarDebug.lua  test.lua
scripts/tests/: TestPrimitive.lua  TestVector3.lua
shaders/: fs_combine.sc  fs_cubes.sc  fs_geom.sc  fs_light.sc  varying.def.sc  vs_cubes.sc  vs_geom.sc
src/: Camera.cpp  Collider.cpp  Core.cpp  Entity.cpp  Lua.cpp  LuaCore.cpp  LuaExporter.cpp  LuaGame.cpp  LuaPrimitive.cpp  LuaVector3.cpp  MeshContainer.cpp  MeshEntity.cpp  PhysicsCore.cpp  Primitive.cpp  PrimitiveDefinitions.cpp  PrimitiveLua.cpp  Renderer.cpp  SceneImporter.cpp  SceneManager.cpp  Texture.cpp  helloworld.cpp  main.cpp
src/lua/: LuaPrimitive.cpp
